--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<script src="scripts/index.js"></script>
 		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body></body>
